--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-remote_theme: melvinchng/event-jekyll-theme
+theme: minima
 plugins:
   - jekyll-feed
 
